Don't use Java 21 constructs, it's a bit too early (and we ask Java 8)